--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "cookie-universal-nuxt": "^2.2.2",
-    "pinia-plugin-persistedstate": "^4.7.1"
+    "laravel-echo": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.7.1",
+    "pusher-js": "^8.4.0"
   }
 }
